<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mustNotBeEmpty">Must not be empty !</string>
    <string name="remember_me">Remember me</string>
    <string name="deconnection">Deconnection</string>
    <string name="profile">Profile</string>
    <string name="nom_profile">Nom:</string>
    <string name="prenom_profile">Prenom:</string>
    <string name="email_Profile">Email:</string>
    <string name="choisir_un_image">choisir votre image</string>
    <string name="Cree_un_compte">Crée un compte</string>
    <string name="simple_utilisateur">Simple utilisateur</string>
    <string name="Nom_de_la_ligue">Nom de la ligue</string>
    <string name="ligue_name">Nom de la ligue:</string>
    <string name="ligueName">ligue</string>
    <string name="description">Description</string>
    <string name="nom_equipe">Nom de l\'equipe:</string>
    <string name="add_ligue">Ajouter une ligue</string>
    <string name="add_equipe">Ajouter une equipe</string>
    <string name="add_stade" />
    <string name="add_Stade">Ajouter un  stade</string>
    <string name="update">Update</string>
    <string name="Update_Profile">Update_Profile</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="email">Email</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic2FtaXRmaWZoYSIsImEiOiJjbDMwb29idWEwMnc2M2NwcTk2emNob2kxIn0.KeK3ud4-DXJOoGnHQFC1kg
</string>

</resources>