<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragements.Profile_Fragement">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profilePrenom2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_baseline_account_circle_24"
            app:civ_border_color="#FF5252"
            app:civ_border_width="5dp"
            app:layout_constraintEnd_toEndOf="parent"



            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="68dp"
            android:text="@string/nom_profile"
            android:textColor="@color/primary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/prenom_profile"
            android:textColor="@color/primary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/email_Profile"
            android:textColor="@color/primary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:text="adress"
            android:textColor="@color/primary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/email_Profile"
            android:textColor="@color/primary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/profileNom"
            android:layout_width="202dp"
            android:layout_height="20dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="10dp"
            android:text="@string/nom"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.326"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />

        <TextView
            android:id="@+id/profilePrenom"
            android:layout_width="202dp"
            android:layout_height="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:text="@string/prenom"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.285"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/profileNom" />

        <TextView
            android:id="@+id/profileEmail"
            android:layout_width="203dp"
            android:layout_height="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.306"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/profilePrenom" />

        <TextView
            android:id="@+id/profileadress"
            android:layout_width="203dp"
            android:layout_height="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.306"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/profileEmail" />


        <TextView
            android:id="@+id/profilePhone"
            android:layout_width="203dp"
            android:layout_height="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.306"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/profileadress" />

        <Button
            android:id="@+id/button23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="124dp"
            android:backgroundTint="@color/primary"
            android:text="@string/Update_Profile"
            app:layout_constraintCircleRadius="05dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileEmail" />

        <Button
            android:id="@+id/button78787"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/primary"
            app:cornerRadius="100dp"
            app:icon="@drawable/ic_baseline_edit_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.315"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />

        <Button
            android:id="@+id/buttonlogout"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/primary"
            app:cornerRadius="100dp"
            app:icon="@drawable/ic_baseline_login_24"
            app:layout_constraintBottom_toTopOf="@+id/profileImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>